feat: header 추가

--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="common/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css" integrity="sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="components/header/header.css">
 </head>
 <body>
+    <header>
+        <div class="wrapper">
+            <div class="logoBox">
+                <img src="images/logo.png" alt="로고 이미지">
+            </div>
+            <ul class="mainNavbar">
+                <li><a href="#">모델</a></li>
+                <li><a href="#">구매</a></li>
+                <li><a href="#">체험</a></li>
+                <li><a href="#">멤버스</a></li>
+                <li><a href="#">제네시스</a></li>
+            </ul>
+            <ul class="subNavbar">
+                <li><a href="#">고객센터</a></li>
+                <li><a href="#">마이 페이지</a></li>
+            </ul>
+            <div class="iconBox">
+                <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
     
 </body>
 </html>
