feat: video-section 추가
-video-section추가
-header font-family 추가
-로고 변경

--- a/index.html
+++ b/index.html
@@ -6,31 +6,61 @@
     <title>Document</title>
     <link rel="stylesheet" href="common/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css" integrity="sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="common/font.css">
     <link rel="stylesheet" href="components/header/header.css">
+    <link rel="stylesheet" href="components/main/main.css">
+    <link rel="stylesheet" href="components/video-section/video-section.css">
 </head>
 <body>
     <header>
-        <div class="wrapper">
-            <div class="logoBox">
-                <img src="images/logo.png" alt="로고 이미지">
+        <div class="nav-wrap">
+            <div class="logo-box">
+                <img src="images/logo.svg" alt="로고 이미지">
             </div>
-            <ul class="mainNavbar">
+            <ul class="nav-left-list">
                 <li><a href="#">모델</a></li>
                 <li><a href="#">구매</a></li>
                 <li><a href="#">체험</a></li>
                 <li><a href="#">멤버스</a></li>
-                <li><a href="#">제네시스</a></li>
+                <li><a href="#">메르세데스 벤츠</a></li>
             </ul>
-            <ul class="subNavbar">
+            <ul class="nav-right-list">
                 <li><a href="#">고객센터</a></li>
                 <li><a href="#">마이 페이지</a></li>
             </ul>
-            <div class="iconBox">
+            <div class="icon-box">
                 <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
     </header>
+    <main>
+        <section class="video-section">
+            <div class="video-wrap">
+                <video src="images/Mercedes-Benz.mp4" autoplay loop muted>
+                    <source src="images/Mercedes-Benz.mp4" type="video">
+                </video>
+            </div>
+                <div class="title-wrap">
+                    <div class="title-box">
+                        <div class="title-box__text">
+                            <p>
+                                메르세데스-벤츠로부터<br/>
+                                전기차의 클래스, 완성되다
+                            </p>
+                            <h2>Recharge Your Class</h2>
+                            <div class="title-box__button">
+                                <button><a href="#">More View</a></button>
+                            </div>
+                        </div>
+                </div>  
+        </section>
+
+
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
 
 
 
