feat: section 추가
- vision-section, defining-section 추가
- font 수정
- header 모바일 버전 수정

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="components/header/header.css">
     <link rel="stylesheet" href="components/main/main.css">
     <link rel="stylesheet" href="components/video-section/video-section.css">
+    <link rel="stylesheet" href="components/vision-section/vision-section.css">
+    <link rel="stylesheet" href="components/defining-section/defining-section.css">
 </head>
-<body>
+<body class="scroll">
     <header>
         <div class="nav-wrap">
             <div class="logo-box">
@@ -55,10 +57,53 @@
                         </div>
                 </div>  
         </section>
+        <section class="vision-section">
+            <div class="text-wrap">
+                <div class="text-box">
+                    <div class="text-box__text">
+                        <p class="sub-title">Vision</p>
+                        <h2>메르세데스-벤츠 삼각별의 역사</h2>
+                            <p>
+                                메르세데스-벤츠는 탄소발자국을 줄여 나가는 과정에서 메르세데스-벤츠 삼각별의 기반이 되는 요소들과 조화를 이루고 있습니다.
+                        </p>
+                        <div class="text-box__button">
+                            <button><a href="#">More View</a></button>
+                        </div>
+                        <div class="text-box__image">
+                            <img src="images/vision-image.avif" alt="건물과 차 사진">
+                        </div>
+                    </div>
+                </div>
+                <div class="video-box">
+                    <div class="video-box__text">
+                        <h2>땅, 바다 그리고 하늘 :</h2>
+                        <p>
+                        이 모든 것은 모빌리티의<br/>
+                        선구자가 되겠다는 비전에서 비롯되었습니다.
+                        </p>
+                        <p>
+                        우리는 메르세데스-벤츠 삼각별이 상징하는 이 요소들을<br/>
+                        오늘날에도 반영하고 있습니다.
+                        </p>
+                    </div>
+                    <div class="video-box__iframe">
+                        <iframe src="https://www.youtube.com/embed/RmWz_ISMDio?si=LwqyXYP9sxffQKVP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="defining-section">
+            <div class="text-wrap">
+                <div class="text-wrap__text">
+                    <h2>Defining Class</h2>
+                    <p>Since 1886.</p>
+                </div>
+                <div class="text-wrap__button">
+                    <button><a href="#">More View</a></button>
+                </div>
+            </div>
+        </section>
 
-
-        <section></section>
-        <section></section>
         <section></section>
     </main>
 
