feat: magazine section 추가

--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mercedes-benz</title>
     <link rel="stylesheet" href="common/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css" integrity="sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="common/font.css">
     <link rel="stylesheet" href="components/header/header.css">
+    <link rel="stylesheet" href="components/body/body.css">
     <link rel="stylesheet" href="components/main/main.css">
     <link rel="stylesheet" href="components/video-section/video-section.css">
     <link rel="stylesheet" href="components/vision-section/vision-section.css">
     <link rel="stylesheet" href="components/defining-section/defining-section.css">
+    <link rel="stylesheet" href="components/magazine-section/magazine-section.css">
 </head>
-<body class="scroll">
+<body>
     <header>
         <div class="nav-wrap">
             <div class="logo-box">
@@ -104,7 +106,44 @@
             </div>
         </section>
 
-        <section></section>
+        <section class="magazine-section">
+            <div class="textwrap">
+                <div class="text-box">
+                    <div class="text-box__text">
+                        <p class="sub-title">Magazine</p>
+                        <h2>Mercedes-Benz me ​Magazine</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="gridwrap">
+                <div class="grid-box">
+                    <div class="grid-box__magazine-box">
+                        <div class="magazin-box__image-eqs-suv">
+                            <div class="magazin-box__text">
+                                <p class="magazin-title">MASTERPIECE IN THE DESERT</p>
+                                <p>캘리포니아 조슈아트리 사막에서 인테리어 디자이너 존 버린과 함께 한 더 뉴 EQS SUV</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-box__magazine-box">
+                        <div class="magazin-box__image-maybach">
+                            <div class="magazin-box__text">
+                                <p class="magazin-title">MERCEDES-MAYBACH EXCLUSIVE NIGHT</p>
+                                <p>궁극의 럭셔리, 메르세데스-마이바흐 S 680 4MATIC 오뜨 부아튀르 에디션이 소개된 시간</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-box__magazine-box">
+                        <div class="magazin-box__image-future">
+                            <div class="magazin-box__text">
+                                <p class="magazin-title">THE FUTURE OF WORK</p>
+                                <p>메르세데스-벤츠 미래 대담, 퓨처 디멘션: 조용한 퇴사에서 주4일 근무까지 달라질 Z세대의 미래 업무 환경과 형태</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
