--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="common/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css" integrity="sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="common/font.css">
+    <link rel="stylesheet" href="common/root.css">
+    <link rel="stylesheet" href="common/keyframes.css">
     <link rel="stylesheet" href="components/header/header.css">
     <link rel="stylesheet" href="components/body/body.css">
     <link rel="stylesheet" href="components/main/main.css">
@@ -14,6 +16,7 @@
     <link rel="stylesheet" href="components/vision-section/vision-section.css">
     <link rel="stylesheet" href="components/defining-section/defining-section.css">
     <link rel="stylesheet" href="components/magazine-section/magazine-section.css">
+    <link rel="stylesheet" href="components/footer/footer.css">
 </head>
 <body>
     <header>
@@ -105,7 +108,6 @@
                 </div>
             </div>
         </section>
-
         <section class="magazine-section">
             <div class="textwrap">
                 <div class="text-box">
@@ -144,7 +146,36 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="nav-wrap">
+                <div class="logo-box">
+                    <img src="images/logo.svg" alt="로고 이미지">
+                </div>
+                <div class="nav-box">
+                    <div class="list-box">
+                        <ul class="nav-left-list">
+                            <li><a href="#">판매 네트워크</a></li>
+                            <li><a href="#">견적 내기</a></li>
+                            <li><a href="#">구매 상담 신청</a></li>
+                            <li><a href="#">시승 신청</a></li>
+                        </ul>
+                        <ul class="nav-right-list">
+                            <li><a href="#">뉴스</a></li>
+                            <li><a href="#">공지사항</a></li>
+                            <li><a href="#">채용</a></li>
+                            <li><a href="#">IR</a></li>
+                        </ul>
+                    </div>
+                    <div class="icon-box">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
+    
 
 
 
