feat: mobile 호환

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <div class="text-box__text">
                         <p class="sub-title">Vision</p>
                         <h2>메르세데스-벤츠 삼각별의 역사</h2>
-                            <p>
-                                메르세데스-벤츠는 탄소발자국을 줄여 나가는 과정에서 메르세데스-벤츠 삼각별의 기반이 되는 요소들과 조화를 이루고 있습니다.
+                        <p class="sub-text">
+                            메르세데스-벤츠는 탄소발자국을 줄여 나가는 과정에서 메르세데스-벤츠 삼각별의 기반이 되는 요소들과 조화를 이루고 있습니다.
                         </p>
                         <div class="text-box__button">
                             <button><a href="#">More View</a></button>
