feat:video fullscreen 문제 해결

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section class="video-section">
             <div class="video-wrap">
-                <video src="images/Mercedes-Benz.mp4" autoplay loop muted>
+                <video src="images/Mercedes-Benz.mp4" autoplay loop muted webkit-playsinline playsinline>
                     <source src="images/Mercedes-Benz.mp4" type="video">
                 </video>
             </div>
