feat: video 배경 js 추가
-모바일버전 재생 문제 해결

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="components/defining-section/defining-section.css">
     <link rel="stylesheet" href="components/magazine-section/magazine-section.css">
     <link rel="stylesheet" href="components/footer/footer.css">
+    <script src="video.js" defer></script>
 </head>
 <body>
     <header>
@@ -44,7 +45,7 @@
     <main>
         <section class="video-section">
             <div class="video-wrap">
-                <video src="images/Mercedes-Benz.mp4" controls autoplay loop muted webkit-playsinline playsinline>
+                <video src="images/Mercedes-Benz.mp4" loop muted>
                     <source src="images/Mercedes-Benz.mp4" type="video">
                 </video>
             </div>
