feat:source 주석처리

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="components/defining-section/defining-section.css">
     <link rel="stylesheet" href="components/magazine-section/magazine-section.css">
     <link rel="stylesheet" href="components/footer/footer.css">
-    <script src="video.js" defer></script>
+    <!-- <script src="video.js" defer></script> -->
 </head>
 <body>
     <header>
@@ -45,8 +45,8 @@
     <main>
         <section class="video-section">
             <div class="video-wrap">
-                <video src="images/Mercedes-Benz.mp4" loop muted>
-                    <source src="images/Mercedes-Benz.mp4" type="video">
+                <video src="images/Mercedes-Benz.mp4" autoplay loop muted playsinline preload="auto">
+                    <!-- <source src="images/Mercedes-Benz.mp4" type="video"> -->
                 </video>
             </div>
                 <div class="title-wrap">
