feat: 모바일 header 수정

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="components/footer/footer.css">
 </head>
 <body>
+    <script src="components/header/header.js"></script>
     <header>
         <div class="nav-wrap">
             <div class="logo-box">
@@ -36,8 +37,8 @@
                 <li><a href="#">마이 페이지</a></li>
             </ul>
             <div class="icon-box">
-                <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-bars"></i>
+               <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+               <i class="fa-solid fa-bars"></i>
             </div>
         </div>
     </header>
