feat: script 수정

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="components/defining-section/defining-section.css">
     <link rel="stylesheet" href="components/magazine-section/magazine-section.css">
     <link rel="stylesheet" href="components/footer/footer.css">
+    <script src="components/header/header.js" defer></script>
 </head>
 <body>
-    <script src="components/header/header.js"></script>
     <header>
         <div class="nav-wrap">
             <div class="logo-box">
